--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   >
     <a-assets>
       <video
-        src="https://cdn.glitch.com/3e641d0e-e339-4228-98f6-3d3a0aa90b70%2FSampleVideo.mp4?v=1591441438404"
+        src="cabana.mp4"
         preload="auto"
         id="vid"
         response-type="arraybuffer"
@@ -77,7 +77,7 @@
     <a-nft
       videohandler
       type="nft"
-      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/allinreality/ARjs_ImageMarker/master/SampleARMarker1"
+      url="image"
       smooth="true"
       smoothount="10"
       smoothtolerance="0.01"
