--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     AFRAME.registerComponent("videohandler", {
       init: function() {
         var marker = this.el;
+        console.log({marker});
+
 
         this.vid = document.querySelector("#vid");
 
