--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         marker.addEventListener(
           "markerFound",
           function() {
-            console.log(marker);
+            console.log({marker});
             this.vid.play();
           }.bind(this)
         );
