added depth buffer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   <a-scene
     vr-mode-ui="enabled: false;"
-    renderer="antialias: true; alpha: true; precision: mediump;"
+    renderer="antialias: true; alpha: true; precision: mediump; logarithmicDepthBuffer: true;"
     embedded
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
   >
