--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       smoothtolerance="0.01"
       smooththreshold="5"
     >
-      <a-video src="#vid" rotation="-90 0 0" position="0 1.75 -1.999" fit-texture>
+      <a-video src="#vid" rotation="-90 0 0" position="0 0 0" width="image.width" height="image.height">
       </a-video>
     </a-nft>
     <a-entity camera></a-entity>
