--- a/main_worker.html
+++ b/main_worker.html
@@ -17,7 +17,7 @@
     <canvas style="position: absolute; left:0; top:0" id="canvas_draw"></canvas>
 </div>
 
-<script src="../js/third_party/three.js/stats.min.js"></script>
+<script src="js/stats.min.js"></script>
 <script src="main_worker.js"></script>
 
 <script>
