--- a/main_worker.html
+++ b/main_worker.html
@@ -13,7 +13,7 @@
 <div style="position:absolute; color:white; top:0;left:0" id="stats1"><div>Main</div></div>
 <div style="position:absolute; color:white; top:80px;left:0" id="stats2"><div>Worker</div></div>
 <div id="container">
-    <video id="video"></video>
+    <video id="cabana"></video>
     <canvas style="position: absolute; left:0; top:0" id="canvas_draw"></canvas>
 </div>
 
@@ -56,7 +56,7 @@
             video.srcObject = stream;
             video.play();
             video.addEventListener("loadedmetadata", function() {
-                start(container, markers["pinball"], video, video.videoWidth, video.videoHeight, canvas_draw, function() {statsMain.update()}, function() {statsWorker.update()});
+                start(container, markers["image"], video, video.videoWidth, video.videoHeight, canvas_draw, function() {statsMain.update()}, function() {statsWorker.update()});
             });
         });
     }
@@ -121,7 +121,7 @@
             video.srcObject = stream;
             video.play();
             video.addEventListener("loadedmetadata", function() {
-                start(container, markers["pinball"], video, video.videoWidth, video.videoHeight, canvas_draw, function() {statsMain.update()}, function() {statsWorker.update()});
+                start(container, markers["image"], video, video.videoWidth, video.videoHeight, canvas_draw, function() {statsMain.update()}, function() {statsWorker.update()});
             });
         });
     }
